fixed overlapping footer

--- a/style.css
+++ b/style.css
@@ -2,8 +2,15 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 div {
     /*width: 90%; */
+    position: relative;
     margin: 0 auto;
     text-align: center;
 }
@@ -41,7 +48,8 @@ input {
 }
 
 footer {
-	position: fixed;
+    flex: 0 0 50px;
+    margin-top: auto;
 	width: 100%;
 	left: 0;
 	bottom: 0;
